_includes/css/style.css
/* Adjust Original Styles */
@media (max-width: {{ site.responsive_bp | minus:1 }}px) {
	.hero-unit {
		padding: 19px;
	}
	.hero-unit header h1 {
		font-size: 40px;
		margin: 0;
	}
}
.hero-unit header h1 {
	margin-bottom: 0.125em;
}

body {
	padding-top: 0;
	padding-bottom: 20px;
}
body > footer {
	padding-left: 20px;
	padding-right: 20px;
}
form {
	margin: 0;
}
i {
	background-image: none !important;
}
.well h1, .well h2, .well h3 {
	margin-top: 0;
}

/* title of the site */
#header {
	height: 80px;
}
#header hgroup {
	position: absolute;
	top: 10px;
	left: 20px;
}
#header h1 {
	margin: 0;
	font-size: 1.75em;
	font-weight: bold;
}
#header h2 {
	color: #ccc;
	margin: 0 0 4px 16px;
	line-height: 0.8;
	font-size: 1.0em;
	font-weight: normal;
}
#header a,
#header a:hover,
#header a:visited {
	text-decoration: none;
}
#header img {
    height: 4.2em;
    width: auto;
    vertical-align: top;
}
#header span {
    display: inline-block;
}

/* header.html: navbar */
.navbar-fixed-top {
	margin-bottom: 20px;
	position: static;
}
.navbar-fixed-top .navbar-inner {
	padding: 0;
	border-top: 1px solid #d4d4d4;
	border-bottom: 1px solid #d4d4d4;
	box-shadow: 0 1px 4px rgba(0, 0, 0, 0.067);
}
.navbar .nav > .active > a,
.navbar .nav > .active > a:hover,
.navbar .nav > .active > a:focus {
	box-shadow: none;
}
.navbar .btn-navbar {
	margin-bottom: 5px;
}
.lt-ie9 .collapse {
	overflow: visible; /* removed from 2.1.1, but still IE need this */
}

/* header.html: dropdown container */
.navbar .nav > li.dropdown-container {
	position: relative !important;
}
.navbar .nav > li.dropdown-container .dropdown-link {
	position: absolute !important;
	top: 0;
	left: 0;
	z-index: 1;
}
.navbar .nav > li.dropdown-container .caret {
	margin-left: 1.5em;
}
.navbar .nav > li.dropdown-container .dropdown-link + .dropdown-toggle {
	z-index: 0;
}

/* post.html */
.post {
}
.post .meta {
}
.post .content {
}

/* asides: sidebar */
#sidebar h3 {
	font-size: 125%;
	line-height: 1.0em;
	margin-bottom: 0.5em;
}
#sidebar p {
	margin: 0 !important;
}
#sidebar ul {
	padding: 0 !important;
}
#sidebar li.divider {
	margin: 0.5em 1px;
}

/* asides/search.html */
#sidebar-search .btn {
	line-height: 20px;
	border-radius: 0 3px 3px 0;
	position: relative;
	z-index: 2;
}
#sidebar-search input,
#sidebar-search input:focus {
	padding-right: 3.5em;
	position: relative;
	z-index: 1;
}
.lt-ie9 #sidebar-search input {
	min-height: 20px;
}

/* asides/archive_tabs.html */
#sidebar-archives .nav-tabs a {
	outline: none;
}

/* asides/recent_post.html */
#sidebar-recent-posts .disqus-comment_count {
	font-size: 85%;
}

/* asides/recent_post.html, asides/tweets.html */
#sidebar-tweets p,
#sidebar-recent-posts p {
	margin: 0.25em 0;
}

/* asides/tweets.html */
#tweets {
	margin-bottom: 1em;
}
#tweets li a:last-child:hover {
	text-decoration: none;
}
#tweets li a:last-child span {
	font-size: 75%;
}

/* post/post_meta.html */
#post-meta ul,
#post-meta li {
	margin: 0;
	display: inline;
	list-style: none outside none;
}
#post-meta li {
	margin-right: 0.5em;
}
#post-meta .mini-icon {
	margin-left: 9px;
	display: block;
}
@media (max-width: {{ site.responsive_bp | minus:1 }}px) {
	#post-meta .meta {
		display: none;
	}
}

/* post/post_meta.html,
   blog/categories.html,
   blog/tags.html,
   asides/archive_tabs.html: tag list */
.tag-list {
	list-style: none;
	margin-bottom: 0;
}
.tag-list li {
	margin-right: 0.5em;
	display: inline-block;
	vertical-align: middle;
}
.tag-list span {
	font-size: 75%;
	vertical-align: super;
}

/* libs/list_categories, libs/list_tags */
.tag-list li.label {
	font-size: inherit;
	font-weight: inherit;
	line-height: inherit;
	margin-top: 0.25em;
	margin-bottom: 0.25em;
}
.tag-list li.label a {
	color: inherit;
}

/* post/related_posts.html */
#related-posts {
	padding-top: 9px;
	padding-bottom: 9px;
}

/* post/socials.html */
li.social {
	float: left;
	margin: 6px 12px;
}

/* pagenation.html, post/post_pagenation.html */
#main_pagenation ul,
#post_pagenation ul {
	margin-left: 0;
}
#main_pagenation li,
#post_pagenation li {
	margin-bottom: 0.5em;
}

/* Icons */
.mini-icon:before {
	font-family: FontAwesome;
	font-weight: normal;
	font-style: normal;
	margin-right: 0.4em;
}
#sidebar-about        .mini-icon:before { content: "\f007"; } /* icon-user */
#sidebar-themes       .mini-icon:before { content: "\f043"; } /* icon-tint */
#sidebar-archives     .mini-icon:before { content: "\f02d"; } /* icon-book */
#sidebar-recent-posts .mini-icon:before { content: "\f016"; } /* icon-file */
#sidebar-github       .mini-icon:before { content: "\f09b"; } /* icon-github */
#sidebar-contact      .mini-icon:before { content: "\f098"; } /* icon-contact */
#sidebar-tweets       .mini-icon:before { content: "\f099"; } /* icon-twitter */
#meta-user.mini-icon:before             { content: "\f007"; } /* icon-user */
#meta-category.mini-icon:before         { content: "\f07c"; } /* icon-folder-open */
#meta-tags.mini-icon:before             { content: "\f02c"; } /* icon-tags */

.highlight {
	border-radius: 4px;
}
.highlight pre {
	background-color: inherit !important;
}

/* project/index.html */
#myProject header h1 {
	font-size: 3.0em;
	margin-bottom: 0.7em;
}
#myCarousel p {
	color: #aaa;
	text-shadow: 0px 2px 3px #000;
}
#myCarousel img {
	margin: 0 auto;
}

#gitterChat {
    width: 100%;
    height: auto;

    border: 0;
}

